todo-project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-project-svc
spec:
  type: ClusterIP
  selector:
    app: todo-project
  ports:
    - name: http
      protocol: TCP
      port: 2345
      targetPort: 3000
